--- a/src/content/post/specific-sport-application.mdx
+++ b/src/content/post/specific-sport-application.mdx
@@ -3,11 +3,15 @@ title: Specific sport application
 publishDate: 2024-08-01
 ---
 
+import { Image } from 'astro:assets';
+
 A famous sport application which had me really disappointed.
 
 - Has connection issues.
 
-![Sport application](/images/specific-sport-application/sport-application.jpg)
+import Img from "../../assets/specific-sport-application/sport-application.jpg"
+
+<Image src={Img} alt="Specific sport application bug" />
 
 - Always push the user to pay for premium features in the app.
 
