--- a/src/content/post/google-maps-export.mdx
+++ b/src/content/post/google-maps-export.mdx
@@ -1,5 +1,5 @@
 ---
-title: Halting problem
+title: Google maps export
 publishDate: 2024-09-14
 ---
 
@@ -16,3 +16,7 @@ The `Semantic Location History` contains each year with one file per month, each
 ---
 
 Related to https://github.com/Its-Just-Nans/maps-history
+
+---
+
+Very interesting to see `wifiScan` in `Timeline Edits.json`...
