--- a/src/content/post/notation-vs-revision.mdx
+++ b/src/content/post/notation-vs-revision.mdx
@@ -1,39 +1,63 @@
 ---
-title: Notation vs Revision
-publishDate: 2019-01-07
+title: Notation vs revision
+publishDate: 2020-01-07
 ---
 
 <table style="margin: auto">
+<style>{`
+  .genius{
+    background-color: #00FF00;
+  }
+  .talented{
+    background-color: #66FF33;
+  }
+  .correct{
+    background-color: #CCFF66;
+  }
+  .passable{
+    background-color: #FFCC33;
+  }
+  .bad{
+    background-color: #FF9966;
+  }
+  .idiot{
+    background-color: #FF6633;
+  }
+  .retarded {
+    background-color: #FF0000;
+  }
+`}
+</style>
   <tbody>
     <tr>
       <th>20</th>
-      <td>genius</td>
-      <td>talented</td>
-      <td>correct</td>
+      <td class="genius">genius</td>
+      <td class="talented">talented</td>
+      <td class="correct">correct</td>
     </tr>
     <tr>
       <th>10-20</th>
-      <td>talented</td>
-      <td>correct</td>
-      <td>passable</td>
+      <td class="talented">talented</td>
+      <td class="correct">correct</td>
+      <td class="passable">passable</td>
     </tr>
     <tr>
       <th>10</th>
-      <td>correct</td>
-      <td>passable</td>
-      <td>bad</td>
+      <td class="correct">correct</td>
+      <td class="passable">passable</td>
+      <td class="bad">bad</td>
     </tr>
     <tr>
       <th>0-10</th>
-      <td>passable</td>
-      <td>bad</td>
-      <td>idiot</td>
+      <td class="passable">passable</td>
+      <td class="bad">bad</td>
+      <td class="idiot">idiot</td>
     </tr>
     <tr>
       <th>0</th>
-      <td>bad</td>
-      <td>idiot</td>
-      <td>retarded</td>
+      <td class="bad">bad</td>
+      <td class="idiot">idiot</td>
+      <td class="retarded">retarded</td>
     </tr>
   </tbody>
   <tfoot>
