fix wrong coords

--- a/src/content/post/canada-trip.mdx
+++ b/src/content/post/canada-trip.mdx
@@ -181,7 +181,7 @@ Final climbing [Bloc Shop Hochelaga](https://blocshop.com/hochelaga/)
 
 Last day
 
-Ate at the meat-lover's paradise [Chez Ruben](http://reubensdeli.com/)
+Ate at the meat-lover's paradise [Ruben's](https://reubens.ca/)
 
 </div>
 
