--- a/src/content/post/rail-pass.mdx
+++ b/src/content/post/rail-pass.mdx
@@ -99,3 +99,11 @@ import Img from "../../assets/rail-pass/pass_rail.jpg"
 <div style="text-align:center">
     <Image src={Img} alt="Pass Rail" />
 </div>
+
+---
+
+Introducing rail-planner, based on open data of SNCF
+
+<div style="text-align:center">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ejOBlQpqYyA?si=Ea8ei2OzWTeIzYZw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
