--- a/src/content/post/halting-problem.mdx
+++ b/src/content/post/halting-problem.mdx
@@ -3,6 +3,10 @@ title: Halting problem
 publishDate: 2023-09-17
 ---
 
+Read https://en.wikipedia.org/wiki/Halting_problem
+
+then check this out
+
 https://github.com/Its-Just-Nans/halting-problem
 
 And now ? What are you going to do ?
