--- a/src/content/post/the-wheel.mdx
+++ b/src/content/post/the-wheel.mdx
@@ -14,4 +14,4 @@ How can you improve something if you don't understand how it works?
 
 ---
 
-this was github profile quote for a while
+this was my github profile quote for a while
