--- a/src/content/post/moving-sofa.mdx
+++ b/src/content/post/moving-sofa.mdx
@@ -3,23 +3,23 @@ title: Moving sofa problem
 publishDate: 2024-08-30
 ---
 
+import { Image } from 'astro:assets';
 
 Serioulsy. Who has a two-dimensional sofa?
 
-- Related to [Moving sofa problem](https://en.m.wikipedia.org/wiki/Moving_sofa_problem)
+Related to [Moving sofa problem](https://en.m.wikipedia.org/wiki/Moving_sofa_problem)
 
-<br/>
-<br/>
-<hr />
-<br/>
 
-btw the sofa experience on the proposed sofa
+import MovingSofa from "../../assets/moving-sofa/moving-sofa.svg"
 
-![Proposed sofa solution](https://upload.wikimedia.org/wikipedia/commons/9/92/Gerver.svg)
+<Image src={MovingSofa} alt="Proposed sofa solution - from wikipedia" />
 
-solution looks awful...
+btw the sofa experience on the proposed sofa solution looks ... awful ?!
 
-<br/>
-<br/>
+---
 
 If at least the guy (Joseph L. Gerver) could include the design for the corresponding (two-dimensional) coffee table...
+
+import MovingSofaTable from "../../assets/moving-sofa/moving-sofa-table.svg"
+
+<Image src={MovingSofaTable} alt="Proposed sofa table" />
