--- a/src/content/post/tramex.mdx
+++ b/src/content/post/tramex.mdx
@@ -9,6 +9,27 @@ Tramex is a project that serves the goal of allowing users to analyze and visual
 - Demo available at https://tramex.github.io/tramex/
 - Documentation available at https://tramex.github.io/tramex/docs/
 
-- https://github.com/Its-Just-Nans/docx-asn1
-- https://github.com/Its-Just-Nans/proxy-ws
-- https://github.com/tramex/types_lte_3gpp
+---
+
+Tiny proxy (https://github.com/Its-Just-Nans/proxy-ws) used during development because of some issues because of CORS (https://tramex.github.io/tramex/docs/knowledge_base.html#cors-errors)
+
+---
+
+[3GPP](https://www.3gpp.org/) create the specification using docx (why?). In these files, [ASN.1](https://en.wikipedia.org/wiki/ASN.1) is used to describe the messages.
+
+The project `docx-asn1` (https://github.com/Its-Just-Nans/docx-asn1) is used to extract ASN.1 from docx files.
+
+The project `types_lte_3gpp` (https://github.com/tramex/types_lte_3gpp) is used to convert the ASN.1 files to Rust files types using `hampi` (https://github.com/ystero-dev/hampi generates the `hampi-rs-asn1c`).
+
+Raw ASN.1 files are also available in the `asn/` directory: https://github.com/Its-Just-Nans/types_lte_3gpp/tree/main/asn
+
+---
+
+Unfortunately some protocols are not available in ASN.1 but in docx (sometimes in word table)
+
+---
+
+See also
+
+- https://bellard.org/ffasn1/
+- https://en.wikipedia.org/wiki/3GPP
