--- a/src/content/post/well-known.mdx
+++ b/src/content/post/well-known.mdx
@@ -6,8 +6,11 @@ customSlug: .well-known/
 
 ## People
 
--   Fabrice Bellard - [https://bellard.org/](https://bellard.org/) - (to many to list)
--   Rui Ueyama - [https://www.sigbus.info/](https://www.sigbus.info/) - (8cc, ldd, mold)
--   David Peter - [https://david-peter.de/](https://david-peter.de/) - (fd, hyperfine, bat, hexyl, pastel)
--   Salvatore Sanfilippo - [http://invece.org/](http://invece.org/) - (redis)
--   Justine Tunney - [https://justine.lol/](https://justine.lol/) - (cosmopolitan)
+- Fabrice Bellard - https://bellard.org/ | to many to list
+- Rui Ueyama - https://www.sigbus.info/ | 8cc, ldd, mold
+- David Peter - https://david-peter.de/ | [fd](https://github.com/sharkdp/fd), [hyperfine](https://github.com/sharkdp/hyperfine), [bat](https://github.com/sharkdp/bat), [hexyl](https://github.com/sharkdp/hexyl), [pastel](https://github.com/sharkdp/pastel)
+- Salvatore Sanfilippo - http://invece.org/ | redis
+- Justine Tunney - https://justine.lol/ | [cosmopolitan](https://justine.lol/cosmopolitan/)
+- Mitchell Hashimoto - https://mitchellh.com/ | hashicorp
+- Andrew Kelley - https://andrewkelley.me/ | [zig](https://ziglang.org/)
+- George Hotz - https://geohot.com/ | [comma.ai](https://comma.ai/), [tinygrad](https://tinygrad.org/)
