--- a/src/content/post/video-is-3d.mdx
+++ b/src/content/post/video-is-3d.mdx
@@ -6,4 +6,4 @@ publishDate: 2024-07-14
 https://www.youtube.com/watch?v=NZFxQXe7LMM by CGMatter
 
 
-https://github.com/Its-Just-Nans/video-is-3d
+Little project to implement this in python (https://github.com/Its-Just-Nans/video-is-3d) with some multiprocessing.
