--- a/src/content/post/tramex.mdx
+++ b/src/content/post/tramex.mdx
@@ -15,7 +15,7 @@ Tiny proxy (https://github.com/Its-Just-Nans/proxy-ws) used during development b
 
 ---
 
-[3GPP](https://www.3gpp.org/) create the specification using docx (why?). In these files, [ASN.1](https://en.wikipedia.org/wiki/ASN.1) is used to describe the messages.
+[3GPP](https://www.3gpp.org/) creates the specification using docx (why?). In these files, [ASN.1](https://en.wikipedia.org/wiki/ASN.1) is used to describe the messages.
 
 The project `docx-asn1` (https://github.com/Its-Just-Nans/docx-asn1) is used to extract ASN.1 from docx files.
 
