--- a/src/content/post/gta-chinatown-wars/gta-chinatown-wars.mdx
+++ b/src/content/post/gta-chinatown-wars/gta-chinatown-wars.mdx
@@ -1,10 +1,11 @@
 ---
 title: GTA Chinatown Wars
 publishDate: 2024-10-25
+customSlug: gta-chinatown-wars
 ---
 
-import CheckboxSaved from "../../components/Checkbox.astro"
-import ResetState from "../../components/ResetState.astro"
+import CheckboxSaved from "../../../components/Checkbox.astro"
+import ResetState from "../../../components/ResetState.astro"
 
 export const Style = ()=>{
   return (
@@ -60,7 +61,7 @@ import { Image } from 'astro:assets';
 ## 8 Random characters
 
 
-import RandomCharacters from "../../assets/gta-chinatown-wars/random-missions.png"
+import RandomCharacters from "./random-missions.png"
 
 <details>
 <summary>Random characters map</summary>
@@ -92,7 +93,7 @@ import RandomCharacters from "../../assets/gta-chinatown-wars/random-missions.pn
 
 ## Rampages
 
-import Rampage from "../../assets/gta-chinatown-wars/rampage.png"
+import Rampage from "./rampage.png"
 
 <details>
 <summary>Rampages map</summary>
@@ -114,7 +115,7 @@ import Rampage from "../../assets/gta-chinatown-wars/rampage.png"
 
 ### Multiple routes
 
-import AgainstClock from "../../assets/gta-chinatown-wars/against-the-clock.png"
+import AgainstClock from "./against-the-clock.png"
 
 <details>
 <summary>Against clock map</summary>
@@ -150,7 +151,7 @@ import AgainstClock from "../../assets/gta-chinatown-wars/against-the-clock.png"
 
 ### Simple route
 
-import AgainstClockSimple from "../../assets/gta-chinatown-wars/against-the-clock-simple.png"
+import AgainstClockSimple from "./against-the-clock-simple.png"
 
 <details>
 <summary>Against clock simple map</summary>
@@ -170,7 +171,7 @@ import AgainstClockSimple from "../../assets/gta-chinatown-wars/against-the-cloc
 
 ## Street racing
 
-import StreetRace from "../../assets/gta-chinatown-wars/street-race.png"
+import StreetRace from "./street-race.png"
 
 <details>
 <summary>Street Racing</summary>
@@ -195,7 +196,7 @@ import StreetRace from "../../assets/gta-chinatown-wars/street-race.png"
 
 ## Rewards
 
-import Dealers from "../../assets/gta-chinatown-wars/dealers.png"
+import Dealers from "./dealers.png"
 
 <details>
 <summary>Dealers map</summary>
@@ -206,7 +207,7 @@ import Dealers from "../../assets/gta-chinatown-wars/dealers.png"
 
 </details>
 
-import Houses from "../../assets/gta-chinatown-wars/houses.png"
+import Houses from "./houses.png"
 
 <details>
 <summary>Houses map</summary>
@@ -234,7 +235,7 @@ import Houses from "../../assets/gta-chinatown-wars/houses.png"
 
 ## Security Cameras
 
-import Cameras from "../../assets/gta-chinatown-wars/cameras.png"
+import Cameras from "./cameras.png"
 
 <details>
 <summary>Cameras map</summary>
@@ -247,7 +248,7 @@ import Cameras from "../../assets/gta-chinatown-wars/cameras.png"
 
 ## Unique Stunt Jumps
 
-import Jumps from "../../assets/gta-chinatown-wars/jumps.png"
+import Jumps from "./jumps.png"
 
 <details>
 <summary>Jumps map</summary>
@@ -262,7 +263,7 @@ import Jumps from "../../assets/gta-chinatown-wars/jumps.png"
 
 ## The Guardian Lions
 
-import Lion from "../../assets/gta-chinatown-wars/lion.png"
+import Lion from "./lion.png"
 
 <details>
 <summary>Lion map</summary>
