--- a/src/content/post/instagram-wants-you-to-use-the-app/instagram-wants-you-to-use-the-app.mdx
+++ b/src/content/post/instagram-wants-you-to-use-the-app/instagram-wants-you-to-use-the-app.mdx
@@ -1,6 +1,7 @@
 ---
 title: Instagram wants you to use the app
 publishDate: 2024-10-26
+customSlug: instagram-wants-you-to-use-the-app
 ---
 
 
@@ -10,7 +11,7 @@ When you start scrolling, Instagram preloads five videos by creating five object
 
 import { Image } from 'astro:assets';
 
-import streams from "../../assets/instagram-wants-you-to-use-the-app/instagram-stream.png"
+import streams from "./instagram-stream.png"
 
 <Image src={streams} alt="screenshot of the 5 object" />
 
