--- a/src/content/post/specific-sport-application/specific-sport-application.mdx
+++ b/src/content/post/specific-sport-application/specific-sport-application.mdx
@@ -1,6 +1,7 @@
 ---
 title: Specific sport application
 publishDate: 2024-08-01
+customSlug: specific-sport-application
 ---
 
 import { Image } from 'astro:assets';
@@ -9,7 +10,7 @@ A famous sport application which had me really disappointed.
 
 - Has connection issues.
 
-import Img from "../../assets/specific-sport-application/sport-application.jpg"
+import Img from "./sport-application.jpg"
 
 <Image src={Img} alt="Specific sport application bug" />
 
