--- a/src/content/post/moving-sofa/moving-sofa.mdx
+++ b/src/content/post/moving-sofa/moving-sofa.mdx
@@ -1,6 +1,7 @@
 ---
 title: Moving sofa problem
 publishDate: 2024-08-30
+customSlug: moving-sofa
 ---
 
 import { Image } from 'astro:assets';
@@ -10,7 +11,7 @@ Serioulsy. Who has a two-dimensional sofa?
 Related to [Moving sofa problem](https://en.m.wikipedia.org/wiki/Moving_sofa_problem)
 
 
-import MovingSofa from "../../assets/moving-sofa/moving-sofa.svg"
+import MovingSofa from "./moving-sofa.svg"
 
 <Image src={MovingSofa} alt="Proposed sofa solution - from wikipedia" />
 
@@ -20,6 +21,6 @@ btw the sofa experience on the proposed sofa solution looks ... awful ?!
 
 If at least the guy (Joseph L. Gerver) could include the design for the corresponding (two-dimensional) coffee table...
 
-import MovingSofaTable from "../../assets/moving-sofa/moving-sofa-table.svg"
+import MovingSofaTable from "./moving-sofa-table.svg"
 
 <Image src={MovingSofaTable} alt="Proposed sofa table" />
