--- a/src/content/post/prague-trip.mdx
+++ b/src/content/post/prague-trip.mdx
@@ -3,12 +3,14 @@ title: Prague trip
 publishDate: 2022-11-13
 ---
 
-Related to https://n4n5.dev/history/athens-prague/
+[Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
+
+Trip from 2022-11-12 to 2022-11-19
+
+One week course on `CTU13: Company Crisis` at Czech Technical University in Prague.
 
 import MapPoints from "../../components/MapPoints.astro"
 import points from "../../assets/prague-trip/records.json"
 
 <MapPoints points={points} height={400} />
-
-
 
