--- a/src/content/post/warsaw-trip.mdx
+++ b/src/content/post/warsaw-trip.mdx
@@ -3,13 +3,17 @@ title: Warsaw trip
 publishDate: 2023-11-19
 ---
 
-Related to https://n4n5.dev/history/athens-warsaw/
+[Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
+
+Trip from 2023-11-18 to 2023-11-25
+
+One week course on `WUT10: Sound: Hearing and Acoustical Measurements` at Warsaw University of Technology.
 
 import MapPoints from "../../components/MapPoints.astro"
 import points from "../../assets/warsaw-trip/records.json"
 
 <MapPoints points={points} height={400} />
 
+<br />
+
 You need to go to https://www.pyzyflakigorace.pl/
-
-
