--- a/src/content/post/codeweup/codeweup.mdx
+++ b/src/content/post/codeweup/codeweup.mdx
@@ -2,6 +2,7 @@
 title: CodeWEup
 publishDate: 2022-02-17
 customSlug: codeweup
+isDev: true
 ---
 
 CodeWEup by Novelis: a little programming contest in Java (four exercise, two hours)
