--- a/src/content/post/cv-as-a-json.mdx
+++ b/src/content/post/cv-as-a-json.mdx
@@ -1,6 +1,7 @@
 ---
 title: CV as a JSON
 publishDate: 2024-02
+isDev: true
 ---
 
 This following post is a follow-up of [this post](https://thoughts.n4n5.dev/cv-integration).
