--- a/src/content/post/cv-integration.mdx
+++ b/src/content/post/cv-integration.mdx
@@ -1,6 +1,7 @@
 ---
 title: Continuous integration of my curriculum vitae
 publishDate: 2022-01-01
+isDev: true
 ---
 
 My CV is in latex and I can compile it using a TeX engine like `lualatex`.
