--- a/src/content/post/greener/greener.mdx
+++ b/src/content/post/greener/greener.mdx
@@ -2,6 +2,8 @@
 title: Greener
 publishDate: 2020-03-01
 customSlug: greener
+isSchool: true
+isDev: true
 ---
 
 Creation of a website about ecology for a school project
