--- a/src/content/post/obs-overlay.mdx
+++ b/src/content/post/obs-overlay.mdx
@@ -1,6 +1,7 @@
 ---
 title: OBS overlay
 publishDate: 2023-07-07
+isDev: true
 ---
 
 If you're streaming your game with [OBS](https://obsproject.com/), you might want to add an overlay to your stream.
