--- a/src/content/post/prague-trip/prague-trip.mdx
+++ b/src/content/post/prague-trip/prague-trip.mdx
@@ -1,6 +1,8 @@
 ---
 title: Prague trip
 publishDate: 2022-11-13
+customSlug: prague-trip
+isSchool: true
 ---
 
 [Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
@@ -9,8 +11,8 @@ Trip from 2022-11-12 to 2022-11-19
 
 One week course on `CTU13: Company Crisis` at Czech Technical University in Prague.
 
-import MapPoints from "../../components/MapPoints.astro"
-import points from "../../assets/prague-trip/records.json"
+import MapPoints from "../../../components/MapPoints.astro"
+import points from "../../../assets/prague-trip/records.json"
 
 <MapPoints points={points} height={400} />
 
