--- a/src/content/post/python-hangman-game.mdx
+++ b/src/content/post/python-hangman-game.mdx
@@ -1,6 +1,8 @@
 ---
 title: Python hangman game
 publishDate: 2020-11
+isSchool: true
+isDev: true
 ---
 
 Networked hangman game in Python, with a few little options!
