--- a/src/content/post/rail-pass/rail-pass.mdx
+++ b/src/content/post/rail-pass/rail-pass.mdx
@@ -1,6 +1,7 @@
 ---
 title: Rail Pass
 publishDate: 2024-08-27
+customSlug: rail-pass
 ---
 
 
@@ -94,7 +95,7 @@ Links
 
 
 import { Image } from 'astro:assets';
-import Img from "../../assets/rail-pass/pass_rail.jpg"
+import Img from "./pass_rail.jpg"
 
 <div style="text-align:center">
     <Image src={Img} alt="Pass Rail" />
