--- a/src/content/post/sudoku/sudoku.mdx
+++ b/src/content/post/sudoku/sudoku.mdx
@@ -1,8 +1,8 @@
 ---
 title: Sudoku Solver
 publishDate: 2019-11-01
-isProject: true
 customSlug: sudoku-solver
+isDev: true
 ---
 
 Created a sudoku solver in C.
