--- a/src/content/post/tramex.mdx
+++ b/src/content/post/tramex.mdx
@@ -1,6 +1,8 @@
 ---
 title: tramex
 publishDate: 2024-06-15
+isSchool: true
+isDev: true
 ---
 
 Tramex is a project that serves the goal of allowing users to analyze and visualize frames in a 4G network.
