--- a/src/content/post/notox/notox.mdx
+++ b/src/content/post/notox/notox.mdx
@@ -2,6 +2,7 @@
 title: notox
 publishDate: 2024-01-01
 customSlug: notox
+isDev: true
 ---
 
 `notox` is a command line tool to clean file and directory names✨
