--- a/src/content/post/thales-tutored-project/thales-tutored-project.mdx
+++ b/src/content/post/thales-tutored-project/thales-tutored-project.mdx
@@ -2,6 +2,8 @@
 title: Tutored Project
 publishDate: 2021-06-20
 customSlug: thales-tutored-project
+isSchool: true
+isDev: true
 ---
 
 > Tutored Project with Thales Alenia Space
