--- a/src/content/post/warsaw-trip/warsaw-trip.mdx
+++ b/src/content/post/warsaw-trip/warsaw-trip.mdx
@@ -1,6 +1,8 @@
 ---
 title: Warsaw trip
 publishDate: 2023-11-19
+customSlug: warsaw-trip
+isSchool: true
 ---
 
 [Athens Network](http://athensnetwork.eu/) allows students (from the schools of the network) to attend courses in other universities (mostly in Europe) for one week.
@@ -9,8 +11,8 @@ Trip from 2023-11-18 to 2023-11-25
 
 One week course on `WUT10: Sound: Hearing and Acoustical Measurements` at Warsaw University of Technology.
 
-import MapPoints from "../../components/MapPoints.astro"
-import points from "../../assets/warsaw-trip/records.json"
+import MapPoints from "../../../components/MapPoints.astro"
+import points from "../../../assets/warsaw-trip/records.json"
 
 <MapPoints points={points} height={400} />
 
