--- a/src/content/post/web101.mdx
+++ b/src/content/post/web101.mdx
@@ -1,6 +1,7 @@
 ---
 title: WEB101 Crash Course
 publishDate: 2022-01-04
+isDev: true
 ---
 
 A presentation of web technologies created by me for students at [Télécom Paris](https://www.telecom-paris.fr/), made in LaTeX!
