--- a/src/content/post/delightful-english-expressions.mdx
+++ b/src/content/post/delightful-english-expressions.mdx
@@ -1,6 +1,7 @@
 ---
 title: Delightful English expressions
 publishDate: 2023-07-26
+isThought: true
 ---
 
 The crème de la crème of English expression
