--- a/src/content/post/instagram-wants-you-to-use-the-app/instagram-wants-you-to-use-the-app.mdx
+++ b/src/content/post/instagram-wants-you-to-use-the-app/instagram-wants-you-to-use-the-app.mdx
@@ -2,6 +2,7 @@
 title: Instagram wants you to use the app
 publishDate: 2024-10-26
 customSlug: instagram-wants-you-to-use-the-app
+isThought: true
 ---
 
 
