--- a/src/content/post/massy-bus-station/massy-bus-station.mdx
+++ b/src/content/post/massy-bus-station/massy-bus-station.mdx
@@ -2,6 +2,7 @@
 title: Massy bus station
 publishDate: 2024-01-01
 customSlug: massy-bus-station
+isThought: true
 ---
 
 import { Image } from 'astro:assets';
