--- a/src/content/post/moving-sofa/moving-sofa.mdx
+++ b/src/content/post/moving-sofa/moving-sofa.mdx
@@ -2,6 +2,7 @@
 title: Moving sofa problem
 publishDate: 2024-08-30
 customSlug: moving-sofa
+isThought: true
 ---
 
 import { Image } from 'astro:assets';
