--- a/src/content/post/quizz-json-draft/quizz-json-draft.mdx
+++ b/src/content/post/quizz-json-draft/quizz-json-draft.mdx
@@ -2,6 +2,7 @@
 title: JSON quiz draft
 publishDate: 2021-04-18
 customSlug: quizz-json-draft
+isThought: true
 ---
 
 > A draft to create a JSON file for a quiz
