--- a/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
+++ b/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
@@ -1,7 +1,8 @@
 ---
-title: Télécom Paris student associations
+title: Telecom Paris student associations
 publishDate: 2024-01-20
 customSlug: telecom-paris-student-associations
+isSchool: true
 ---
 
 A brief description of my participation in student associations at Télécom Paris
