--- a/src/content/post/terraform-dojo/terraform-dojo.mdx
+++ b/src/content/post/terraform-dojo/terraform-dojo.mdx
@@ -2,6 +2,7 @@
 title: Terraform dojo
 publishDate: 2022-03-16
 customSlug: terraform-dojo
+isDev: true
 ---
 
 [Padok](https://www.padok.fr/) has organized a Dojo (19h-22h).
