--- a/src/content/post/specific-sport-application/specific-sport-application.mdx
+++ b/src/content/post/specific-sport-application/specific-sport-application.mdx
@@ -2,6 +2,7 @@
 title: Specific sport application
 publishDate: 2024-08-01
 customSlug: specific-sport-application
+isThought: true
 ---
 
 import { Image } from 'astro:assets';
