--- a/src/content/post/the-wheel.mdx
+++ b/src/content/post/the-wheel.mdx
@@ -1,6 +1,7 @@
 ---
 title: Reinventing the wheel
 publishDate: 2020-09-22
+isThought: true
 ---
 
 Seen a lot on stackoverflow (and elsewhere): "Don't reinvent the wheel".
