--- a/src/content/post/turtle-with-a-hat/turtle-with-a-hat.mdx
+++ b/src/content/post/turtle-with-a-hat/turtle-with-a-hat.mdx
@@ -2,6 +2,7 @@
 title: Turtle with a hat
 publishDate: 2021-01-23
 customSlug: turtle-with-a-hat
+isThought: true
 ---
 
 import { Image } from "astro:assets"
