--- a/src/content/post/website-for-rt/website-for-rt.mdx
+++ b/src/content/post/website-for-rt/website-for-rt.mdx
@@ -2,6 +2,7 @@
 title: Website for R&T students
 publishDate: 2021-09
 customSlug: website-for-rt
+isSchool: true
 ---
 
 Website for R&T (Networks and Telecommunications) students
