--- a/src/content/post/telecom-paris/telecom-paris.mdx
+++ b/src/content/post/telecom-paris/telecom-paris.mdx
@@ -10,12 +10,15 @@ isSchool: true
 One of France's top engineering schools in the Grandes Ecoles system.
 Equivalent to a top-tier university in the UK/US.
 
-Options:
 
-- 2nd year - TELECOM (antennas and telecommunications)
-- 3rd year - RIO (networks and IoT)
-
-My 2nd and 3rd years are in apprenticeship at [Quandela](https://www.quandela.com/)
+- 1st year
+    - general engineering
+- 2nd year
+    - major in *TELECOM* (antennas and telecommunications)
+    - in apprenticeship at Quandela https://www.quandela.com/
+- 3rd year
+    - major in *RIO* (networks and IoT)
+    - in apprenticeship at Quandela https://www.quandela.com/
 
 ---
 
