--- a/src/content/post/tramex.mdx
+++ b/src/content/post/tramex.mdx
@@ -27,7 +27,7 @@ Raw ASN.1 files are also available in the `asn/` directory: https://github.com/I
 
 ---
 
-Unfortunately some protocols are not available in ASN.1 but in docx (sometimes in word table)
+Unfortunately some protocols are not available as ASN.1. But some protocols are still described in the docx (but with multiple - complicated - tables)
 
 ---
 
