--- a/src/content/post/massy-bus-station/massy-bus-station.mdx
+++ b/src/content/post/massy-bus-station/massy-bus-station.mdx
@@ -3,6 +3,7 @@ title: Massy bus station
 publishDate: 2024-01-01
 customSlug: massy-bus-station
 isThought: true
+draft: true
 ---
 
 import { Image } from 'astro:assets';
