--- a/src/content/post/telecom-etude-mission/telecom-etude-mission.mdx
+++ b/src/content/post/telecom-etude-mission/telecom-etude-mission.mdx
@@ -7,7 +7,7 @@ customSlug: telecom-etude-mission
 
 > From 2023-06 to 2023-08
 
-Development services as a mission of the [Junior Enterprise](https://en.wikipedia.org/wiki/Junior_enterprise): telecom Etude (https://telecom-etude.fr/)
+Development services as a mission of the [Junior Enterprise](https://en.wikipedia.org/wiki/Junior_enterprise): telecom etude (https://telecom-etude.fr/)
 
 The mission was to develop a specific tracking website with multi-user management - for the Axibio company.
 
