--- a/src/content/post/versasense-summer-job/versasense-summer-job.mdx
+++ b/src/content/post/versasense-summer-job/versasense-summer-job.mdx
@@ -1,5 +1,5 @@
 ---
-title: Leuven Trip
+title: Versasense summer job
 publishDate: 2022-08-27
 customSlug: versasense-summer-job
 isWork: true
@@ -26,8 +26,9 @@ Missions:
 
 Worked with:
 
-- React.js && TypeScript
-- A little bit of Go
+- React.js - https://reactjs.org/
+- TypeScript - https://www.typescriptlang.org/
+- A little bit of Go - https://go.dev/
 - GIT and Bitbucket
 - English language
 - Jira
