--- a/src/content/post/cv-as-a-json.mdx
+++ b/src/content/post/cv-as-a-json.mdx
@@ -17,3 +17,11 @@ repo is here: https://github.com/Its-Just-Nans/curriculum-vitae
 ---
 
 yes, my cv is now a json file (+ a picture if needed).
+
+---
+
+## Edit 2024-11
+
+the script is now single-file and self invoking itself inside `lualatex`
+
+`how *fun* ?`
