--- a/src/content/post/wes/wes.mdx
+++ b/src/content/post/wes/wes.mdx
@@ -4,8 +4,8 @@ publishDate: 2023-01-17
 customSlug: wes
 ---
 
-2023-01-14 to 2023-01-17 at Risoul
+WES (ski weed-end) during 2023-01-14 to 2023-01-17 at Risoul
 
-https://n4n5.dev/sportiva/activity/8396961242/
-https://n4n5.dev/sportiva/activity/8401435913/
-https://n4n5.dev/sportiva/activity/8406715380/
+- https://n4n5.dev/sportiva/activity/8396961242/
+- https://n4n5.dev/sportiva/activity/8401435913/
+- https://n4n5.dev/sportiva/activity/8406715380/
