--- a/src/content/post/wes/wes.mdx
+++ b/src/content/post/wes/wes.mdx
@@ -4,7 +4,7 @@ publishDate: 2023-01-17
 customSlug: wes
 ---
 
-WES (ski weed-end) during 2023-01-14 to 2023-01-17 at Risoul
+WES (ski week-end) during 2023-01-14 to 2023-01-17 at Risoul
 
 - https://n4n5.dev/sportiva/activity/8396961242/
 - https://n4n5.dev/sportiva/activity/8401435913/
