--- a/src/content/post/wefa/wefa.mdx
+++ b/src/content/post/wefa/wefa.mdx
@@ -2,6 +2,7 @@
 title: WEFA
 publishDate: 2023-05-12
 customSlug: wefa
+isSchool: true
 ---
 
 WEFA (end of year week-end) during 2023-05-08 to 2023-05-12 at Saint-Léger-les-Mélèzes
