--- a/src/content/post/wer/wer.mdx
+++ b/src/content/post/wer/wer.mdx
@@ -2,6 +2,7 @@
 title: WER
 publishDate: 2023-05-20
 customSlug: wer
+isSchool: true
 ---
 
 WER (hiking week-end) during 2023-05-18 to 2023-05-20 at Mont-Blanc
