--- a/src/content/post/wes/wes.mdx
+++ b/src/content/post/wes/wes.mdx
@@ -2,6 +2,7 @@
 title: WES
 publishDate: 2023-01-17
 customSlug: wes
+isSchool: true
 ---
 
 WES (ski week-end) during 2023-01-14 to 2023-01-17 at Risoul
