found missing category

--- a/src/content/post/apprenticeship-nextsourcia/apprenticeship-nextsourcia.mdx
+++ b/src/content/post/apprenticeship-nextsourcia/apprenticeship-nextsourcia.mdx
@@ -4,6 +4,7 @@ publishDate: 2021-09-06
 customSlug: apprenticeship-nextsourcia
 isWork: true
 isSchool: true
+isDev: true
 ---
 
 > From 2020-10-05 to 2021-09-06
