--- a/src/content/post/apprenticeship-quandela/apprenticeship-quandela.mdx
+++ b/src/content/post/apprenticeship-quandela/apprenticeship-quandela.mdx
@@ -3,20 +3,13 @@ title: Apprenticeship at Quandela
 publishDate: 2024-08-31
 customSlug: apprenticeship-quandela
 isWork: true
+isDev: true
 isSchool: true
 ---
 
 > From 2022-09-15 to 2024-08-31
 
 Worked almost two year in apprenticeship in the dev team.
-
-
-import Logo from "./quandela.png"
-import { Image } from 'astro:assets';
-
-<div style="text-align: center">
-    <Image src={Logo} alt="Quandela logo" height={100}/>
-</div>
 
 Worked with:
 
@@ -45,9 +38,19 @@ Worked with:
 
 Worked two weeks at https://www.exaion.com/
 
+---
+
 Links:
 
 - https://www.quandela.com/
 - https://perceval.quandela.net/
 - https://github.com/Quandela
 
+
+
+import Logo from "./quandela.png"
+import { Image } from 'astro:assets';
+
+<div style="text-align: center">
+    <Image src={Logo} alt="Quandela logo" height={100}/>
+</div>
