--- a/src/content/post/datacenter-visit/datacenter-visit.mdx
+++ b/src/content/post/datacenter-visit/datacenter-visit.mdx
@@ -2,6 +2,7 @@
 title: Datacenter visit
 publishDate: 2022-06-17
 customSlug: datacenter-visit
+isEvent: true
 ---
 
 [ORNESS](https://www.orness.com/) and [Rezel](https://rezel.net) have organized a visit of a datacenter.
