--- a/src/content/post/journee-federez/journee-federez.mdx
+++ b/src/content/post/journee-federez/journee-federez.mdx
@@ -2,6 +2,7 @@
 title: Journées FedeRez
 publishDate: 2023-06-03
 customSlug: journee-federez
+isEvent: true
 ---
 
 [Journées FedeRez](https://federez.net/journees/) 2023 @ Télécom Paris
