--- a/src/content/post/matrix.mdx
+++ b/src/content/post/matrix.mdx
@@ -1,6 +1,8 @@
 ---
 title: Matrix
 publishDate: 2022-02-05
+isDev: true
+isThought: true
 ---
 
 [Matrix](https://matrix.org/) is a protocol used to create an open network for secure, decentralised communication
