--- a/src/content/post/orness-event/orness-event.mdx
+++ b/src/content/post/orness-event/orness-event.mdx
@@ -2,6 +2,7 @@
 title: Orness Event
 publishDate: 2022-03-21
 customSlug: orness-event
+isEvent: true
 ---
 
 [ORNESS](https://www.orness.com/) and [Rezel](https://rezel.net) have organized en event.
