--- a/src/content/post/rezel/rezel.mdx
+++ b/src/content/post/rezel/rezel.mdx
@@ -2,6 +2,7 @@
 title: Rezel
 publishDate: 2021-09-07
 customSlug: rezel
+isThought: true
 ---
 
 Rezel is an association that provides services for Télécom Paris associations and students (cloud storage, communication, web hosting, etc.).
