--- a/src/content/post/rust-meetup/rust-meetup.mdx
+++ b/src/content/post/rust-meetup/rust-meetup.mdx
@@ -2,6 +2,7 @@
 title: Rust Meetup
 publishDate: 2023-02-15
 customSlug: rust-meetup
+isEvent: true
 ---
 
 Rust Meetup @ [Stockly](https://www.stockly.ai/)
