--- a/src/content/post/tocs/tocs.mdx
+++ b/src/content/post/tocs/tocs.mdx
@@ -2,6 +2,7 @@
 title: TOCS
 publishDate: 2021-06-30
 customSlug: tocs
+isEvent: true
 ---
 
 TOCS means the "Trophée des objets connectés" (Trophy of connected objects).
