--- a/src/content/post/gta-chinatown-wars/gta-chinatown-wars.mdx
+++ b/src/content/post/gta-chinatown-wars/gta-chinatown-wars.mdx
@@ -2,6 +2,7 @@
 title: GTA Chinatown Wars
 publishDate: 2024-10-25
 customSlug: gta-chinatown-wars
+isThought: true
 ---
 
 import CheckboxSaved from "../../../components/Checkbox.astro"
