--- a/src/content/post/cv-integration.mdx
+++ b/src/content/post/cv-integration.mdx
@@ -1,8 +1,10 @@
 ---
-title: Continuous integration of my curriculum vitae
+title: CV integration
 publishDate: 2022-01-01
 isDev: true
 ---
+
+> **Continuous integration of my curriculum vitae**
 
 My CV is in latex and I can compile it using a TeX engine like `lualatex`.
 
