--- a/src/content/post/instagram-wants-you-to-use-the-app/instagram-wants-you-to-use-the-app.mdx
+++ b/src/content/post/instagram-wants-you-to-use-the-app/instagram-wants-you-to-use-the-app.mdx
@@ -1,10 +1,11 @@
 ---
-title: Instagram wants you to use the app
+title: Instagram app
 publishDate: 2024-10-26
 customSlug: instagram-wants-you-to-use-the-app
 isThought: true
 ---
 
+> **Instagram wants you to use the app**
 
 Instagram loads its "reels" using [`URL.createObjectURL`](https://developer.mozilla.org/en-US/docs/Web/API/URL/createObjectURL_static) to play the video.
 
