--- a/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
+++ b/src/content/post/telecom-paris-student-associations/telecom-paris-student-associations.mdx
@@ -1,5 +1,5 @@
 ---
-title: Télécom Paris student associations
+title: Student associations
 publishDate: 2024-01-20
 customSlug: telecom-paris-student-associations
 isSchool: true
