--- a/src/content/post/apprenticeship-nextsourcia/apprenticeship-nextsourcia.mdx
+++ b/src/content/post/apprenticeship-nextsourcia/apprenticeship-nextsourcia.mdx
@@ -1,5 +1,5 @@
 ---
-title: Apprenticeship at NextSourcia
+title: Work at NextSourcia
 publishDate: 2021-09-06
 customSlug: apprenticeship-nextsourcia
 isWork: true
