--- a/src/content/post/apprenticeship-quandela/apprenticeship-quandela.mdx
+++ b/src/content/post/apprenticeship-quandela/apprenticeship-quandela.mdx
@@ -1,5 +1,5 @@
 ---
-title: Apprenticeship at Quandela
+title: Work at Quandela
 publishDate: 2024-08-31
 customSlug: apprenticeship-quandela
 isWork: true
