update tramex article

--- a/src/content/post/well-known.mdx
+++ b/src/content/post/well-known.mdx
@@ -8,6 +8,7 @@ isThought: true
 ## People
 
 - Fabrice Bellard - https://bellard.org/ | to many to list
+- Terry A. Davis | [TempleOS](https://templeos.org/)
 - Rui Ueyama - https://www.sigbus.info/ | 8cc, ldd, mold
 - David Peter - https://david-peter.de/ | [fd](https://github.com/sharkdp/fd), [hyperfine](https://github.com/sharkdp/hyperfine), [bat](https://github.com/sharkdp/bat), [hexyl](https://github.com/sharkdp/hexyl), [pastel](https://github.com/sharkdp/pastel)
 - Salvatore Sanfilippo - http://invece.org/ | redis
