--- a/src/content/post/tramex.mdx
+++ b/src/content/post/tramex.mdx
@@ -1,6 +1,7 @@
 ---
 title: tramex
 publishDate: 2024-06-15
+updatedDate: 2024-12-13
 isSchool: true
 isDev: true
 ---
@@ -35,3 +36,5 @@ See also
 
 - https://bellard.org/ffasn1/
 - https://en.wikipedia.org/wiki/3GPP
+- https://letsencrypt.org/docs/a-warm-welcome-to-asn1-and-der/
+- https://github.com/librasn/rasn
